--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,11 @@ title: Zellicious
 description: GitHub page for Zellicious
 url: "https://zellicious.github.io"
 
-theme: minima
+remote_theme: jekyll/minima
+
+plugins:
+  - jekyll-remote-theme
+  - jekyll-seo-tag
 
 minima:
   skin: dark
-
-plugins:
-  - jekyll-feed
